Some Big Changes
changes in "OnSay3"

--- a/MyShop/MyShop.csproj
+++ b/MyShop/MyShop.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CCFB97CA-20C0-4974-9539-D34BEDB97082}</ProjectGuid>
+    <ProjectGuid>{ADCE9219-17FE-4B7B-A094-A56E0202DB4F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MyShop</RootNamespace>
-    <AssemblyName>MyShop.auto</AssemblyName>
+    <AssemblyName>MyShop</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,7 +20,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -33,28 +31,25 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="InfinityScript, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>.\InfinityScript.dll</HintPath>
+    <Reference Include="InfinityScript">
+      <HintPath>I:\call of duty modern warfare 3\InfinityScript.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MyMapedit.cs" />
-    <Compile Include="MyStats.cs" />
-    <Compile Include="Perks.cs" />
-    <Compile Include="MapRotate.cs" />
-    <Compile Include="MyShop.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GameType.cs" />
-    <Compile Include="Weapons.cs" />
+    <Compile Include="MapRotate.cs" />
+    <Compile Include="MyMapedit.cs" />
+    <Compile Include="MyShop.cs" />
+    <Compile Include="MyStats.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WeaponUtils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
